--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,15 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 .flex-container{
+    /*height: 400px; horizontal placement needs height */
     display: flex;
+    flex-direction: column;
     background-color: coral;
+    /* always on the main axis*/
+    justify-content: space-between;
+    /*always on the cross axis*/
+    align-items: start;
+
 }
 
 .item{
@@ -19,3 +26,8 @@ body{
     color: whitesmoke;
     margin: 10px;
 }
+/* .item:nth-of-type(3){
+    nth-of-type --> selector of a class of same type          
+    align-self: end;
+    color: greenyellow;
+} */
